# backend/src/routes/auth.routes.js
@@ -8,20 +8,24 @@ const {
   logout,
   forgotPassword,
   resetPassword,
-  verifyEmail
+  verifyEmail,
+  loginMFA,
+  verifyMFACode
 } = require('../controllers/auth.controller');
 const { protect } = require('../middlewares/auth.middleware');
 
 // Routes publiques
 router.post('/register', register);
 router.post('/login', login);
+router.post('/login-mfa', loginMFA);
+router.post('/verify-mfa-code', verifyMFACode);
 router.post('/refresh-token', refreshToken); // Public mais nécessite refresh token
 router.post('/forgot-password', forgotPassword);
 router.post('/reset-password/:token', resetPassword);
 router.post('/verify-email/:token', verifyEmail);
 
 // Routes protégées
-router.get('/me', protect, getMe);
+router.get('/whoami', protect, getMe);
 router.post('/logout', protect, logout);
 
 module.exports = router;
